--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "watch-property-decorator",
     "version": "1.0.0",
-    "main": "./src/index.js",
+    "main": "./src/index.ts",
     "scripts": {
         "test": "jest",
         "test:watch": "jest --watch",
